<resources>
    <string name="app_name">book</string>
    <string name="publisher">Publisher</string>
    <string name="number_of_pages">Number of Pages</string>
    <string name="publish_date">Publish Date</string>
    <string name="title">title</string>
    <string name="subtitle">subtitle</string>
    <string name="description">description</string>
    <string name="preview">Preview</string>
    <string name="buy">Buy</string>
</resources>