<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/Book"
                android:layout_width="130dp"
                android:layout_height="160dp"
                android:layout_margin="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/publisher"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/NoOfPages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:padding="4dp"
                    android:text="@string/number_of_pages"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/PublishDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:padding="4dp"
                    android:text="@string/publish_date"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="@string/subtitle"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <Button
                android:id="@+id/Preview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/preview"
                android:textAllCaps="false"
                style="?android:attr/buttonBarButtonStyle" />


            <Button
                android:id="@+id/BtnBuy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/buy"
                android:textAllCaps="false"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>